# chat_app

./: .gitignore  Cargo.toml
chat_mobile/: README.md  pubspec.yaml
chat_mobile/android/app/: build.gradle.kts
chat_mobile/ios/Runner.xcodeproj/: project.pbxproj
chat_mobile/lib/: main.dart
chat_mobile/lib/config/: app_config.dart
chat_mobile/lib/models/: chat_request.dart  message.dart  user.dart
chat_mobile/lib/services/: auth_service.dart  websocket_service.dart
chat_mobile/lib/ui/pages/: chat_detail_page.dart  chat_list_page.dart  login_page.dart
chat_mobile/lib/viewmodels/: auth_viewmodel.dart  chat_viewmodel.dart
chat_mobile/linux/runner/: my_application.cc
chat_mobile/macos/Runner.xcodeproj/: project.pbxproj
chat_mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
chat_mobile/web/: index.html
client/: CMakeLists.txt
client/resources/: style.qss
client/src/: main.cpp  mainwindow.cpp  mainwindow.h
client/src/application/controllers/: LoginController.cpp  LoginController.h
client/src/domain/entities/: Message.cpp  Message.h  User.cpp  User.h
client/src/domain/repositories/: IMessageRepository.h  IUserRepository.h
client/src/domain/usecases/: LoginUseCase.cpp  LoginUseCase.h
client/src/infrastructure/media/: IpcCapture.h  WebRTCManager.cpp  WebRTCManager.h
client/src/infrastructure/network/: WebSocketClient.cpp  WebSocketClient.h
client/src/infrastructure/repositories/: MemoryMessageRepository.cpp  MemoryMessageRepository.h  MemoryUserRepository.cpp  MemoryUserRepository.h
client/src/infrastructure/serialization/: JsonSerializer.cpp  JsonSerializer.h
client/src/ui/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  VideoCallDialog.cpp  VideoCallDialog.h
client/src/webrtc/: FFmpegTest.cpp  FFmpegTest.h  VideoCapture.cpp  VideoCapture.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  WebRTCTest.cpp  WebRTCTest.h
src/: lib.rs  main.rs
src/application/dto/: mod.rs
src/application/handlers/: chat_handler.rs  mod.rs
src/core/: error.rs
src/core/models/: message.rs  room.rs  user.rs
src/domain/: mod.rs
src/domain/services/: chat_service.rs  mod.rs
src/domain/traits/: message_handler.rs  message_repository.rs  mod.rs  user_repository.rs
src/infrastructure/: mod.rs  redis_client.rs
src/infrastructure/broadcast/: broadcast_manager.rs  mod.rs
src/infrastructure/db/: mod.rs
src/infrastructure/network/: mod.rs  websocket_server.rs
src/infrastructure/repositories/: memory_message_repo.rs  memory_user_repo.rs  mod.rs  sqlite_user_repo.rs
