[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }